--- a/main.tex
+++ b/main.tex
@@ -65,7 +65,7 @@ En sammanfattning av de väsentliga ändringarna jämfört med tidigare dokument
     \item Sektionsordförande och SAMO är ej längre separata organ.
     \item Praxis kodifieras angående frågor om mandat, bl.a. valbarhetshinder, avsägelser och entlediganden.
     \item Bestämmelser om misstroendeförklaring förtydligas, men ska i allt materiellt tolkas lika.
-    \item TODO sektmöte
+    \item Avsnittet om sektionsmöten städas upp och regler om personval flyttas till reglemente.
     \item En långtgående elimination av redundans i definitionen av organen, särskilt mellan stadga och reglemente.
     \item En konsolidation av bestämmelser om ekonomi för sektionen och dess organ.
     \item Förtydligande görs kring stadgeändringar och reglementesändringar för att lösa frågeställningar kring ändringsyrkanden.
@@ -171,17 +171,17 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 2.1 och 2.4
   \switchcolumn
     \item \emph{Medlem som ska erlägga sektionsavgift, eller summa motsvarande denna, gör detta terminsvis.}
 
+  %\switchcolumn*
+  %  (\S 2.2.1, \S 2.5.4, \S 2.6.2, \S 2.7.2, \S 2.8.2)
+  %\switchcolumn
+  %  \item Medlem \emph{äger} närvaro-, och yttranderätt på sektionsmöte.
+  %    \label{2.1:närvaro} 
+
   \switchcolumn*
-    (\S 2.2.1, \S 2.5.4, \S 2.6.2, \S 2.7.2, \S 2.8.2)
+    \item[] (\S 2.2.1, \S 2.2.2, \S 2.5.4, \S 2.6.2, \S 2.7.2, \S 2.8.2)
+    \item[] (\S 2.2.4, \S 2.2.5, \S 2.8.2)
   \switchcolumn
-    \item Medlem \emph{äger} närvaro-, och yttranderätt på sektionsmöte.
-      \label{2.1:närvaro}
-    
-  \switchcolumn*
-    (\S 2.2.5, \S 2.8.2)
-  \switchcolumn
-    \item Medlem \emph{äger} rätt att ta del av mötesprotokoll och sektionens övriga handlingar, undantaget de dokument som listas som icke offentliga i reglemente.
-      \label{2.1:offentlighet}
+    \item \emph{Rättigheter tillkommer enligt detta kapitel, \S\ref{5.x:rösträtt}, \S\ref{5.x:grundrätt}, \S\ref{7.x:SNFrätt}, \S\ref{11.x:intrrätt} och \S\ref{15.x:offentlighet}.} \label{2.x:allarätt} 
     
   \switchcolumn*
     (\S 2.3.1, \S 2.5.5, \S 2.6.3, \S 2.7.3, \S 2.8.3)
@@ -237,7 +237,8 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 2.2 och 2.3
     \item Varje medlem har motionsrätt till sektionsmöte
     
   \switchcolumn
-    \item \emph{Ordinarie} medlem \emph{äger dessutom} förslags- och rösträtt på sektionsmöte.
+    \item[] \emph{(ersätts av \S\ref{2.x:allarätt})} 
+    %\item \emph{Ordinarie} medlem \emph{äger dessutom} förslags- och rösträtt på sektionsmöte.
 
   \switchcolumn*
 
@@ -253,9 +254,7 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 2.2 och 2.3
     
     \item \emph{Ordinarie} medlem är valbar till post inom sektionen.
     
-    \item \emph{Ordinarie} medlem \emph{äger} rätt till medlemskap i sektionens intresseföreningar.
-    
-    \emph{(ersätts av \S \ref{2.1:offentlighet})}
+    \item[] \emph{(ersätts av \S\ref{2.x:allarätt})}
     
     \item \emph{Ordinarie} medlem \emph{äger} rätt att \emph{nyttja} av sektionen erbjudna tjänster.
     
@@ -310,13 +309,13 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 2.5
     \item Förslag till hedersmedlem lämnas \emph{skriftligen} till sektionsstyrelsen \emph{och talmanspresidiet} med minst 25 namnunderskrifter från medlemmar.
 
     \item Ärendet ska tas upp på nästa sektionsmöte\emph{, dock tidigast 6 läsdagar efter att förslaget inkommit}.
-    Beslut om kallande skall \emph{fattas} med minst \sfrac{2}{3} majoritet.
+    Beslut om kallande skall \emph{fattas} med minst \sfrac{2}{3} majoritet. \label{maj:hm1}
     
     \item Vid bifall kallas personen till nästa sektionsmöte\emph{, adjungerad med närvaro- och yttranderätt, där} val förrättas.
 
     \item Personen ska närvara vid valet, eller ha inkommit med skriftligt bifall.
 
-    \item Beslut om inval ska \emph{fattas} med minst \sfrac{2}{3} majoritet.
+    \item Beslut om inval ska \emph{fattas} med minst \sfrac{2}{3} majoritet. \label{maj:hm2}
     
 \switchcolumn*
     \subsubsection*{Förteckning}%
@@ -332,7 +331,7 @@ arrangemang.
     
 \switchcolumn
     \subsubsection*{Rättigheter}%
-    \emph{(ersätts av \S \ref{2.1:närvaro})}
+    \emph{(ersätts av \S \ref{2.x:allarätt})}
     
     \item Hedersmedlem \emph{äger} närvaro- och intaganderätt på alla sektionens arrangemang \emph{öppna för samtliga medlemmar}.
 
@@ -381,7 +380,7 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 2.6
     
 \switchcolumn
     \subsubsection*{Rättigheter}%
-    \emph{(ersätts av \S \ref{2.1:närvaro})}
+    \emph{(ersätts av \S \ref{2.x:allarätt})}
     
     \item Seniormedlem är valbar till post inom sektionen.
     
@@ -424,7 +423,7 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 2.7
     \itemb Phatriark/Mathriark må kvarstå på post inom sektionen.
     
   \switchcolumn
-    \emph{(ersätts av \S \ref{2.1:närvaro})}
+    \emph{(ersätts av \S \ref{2.x:allarätt})}
 
   \switchcolumn*
     \subsubsection*{Phatriarkers/Mathriarkers skyldigheter}%
@@ -463,7 +462,7 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 2.8
     \emph{Ansökan lämnas skriftligen} till sektionsstyrelsen och talmanspresidiet.
     
     \item \emph{Ärendet ska tas upp på nästa sektionsmöte, dock tidigast 6 läsdagar efter att förslaget inkommit.
-    Beslut om utnämnande ska fattas med minst \sfrac{2}{3} majoritet.}
+    Beslut om utnämnande ska fattas med minst \sfrac{2}{3} majoritet.} \label{maj:sm}
     
 \switchcolumn*
     \subsubsection*{Särskilda ledamöters rättigheter}%
@@ -518,7 +517,7 @@ Härigenom föreskrivs i fråga om stadgans kapitel 3 att kapitlet i sin helhet 
     
     \item Sektionens inspektor \emph{ska} vara professor vid institutionen för fysik eller institutionen för matematiska vetenskaper och tillvarata F- och TM-teknologens intressen, samt fungera som en länk mellan teknologer och anställda.
 	
-	\item Sektionens inspektor väljs på två på varandra följande sektionsmöten med minst \sfrac{2}{3} majoritet, för mandat på tre år. 
+	\item Sektionens inspektor väljs på två på varandra följande sektionsmöten med minst \sfrac{2}{3} majoritet, för mandat på tre år. \label{maj:in} 
 	
 	\item \emph{Nominering} till inspektor inlämnas till sektionsstyrelsen med minst 25 namnunderskrifter från medlemmar, eller lyfts av sektionsstyrelsen med enkel majoritet.
     Innan val skall sektionsstyrelsen \emph{inhämta} den nominerades \emph{samtycke till kandidatur}.
@@ -691,12 +690,14 @@ Härigenom förskrivs i fråga om stadgan
 \end{dels}
 
 \begin{lydelse}
-    (se \S 5.13.1, \S 9.1.3)
+    (se \S 5.12.3, \S 5.13.1, \S 9.1.3)
   \switchcolumn
     \item \emph{Post i sektionens organ tillsätts i vanliga fall genom personval på sektionsmöte.} \label{4.x:tillsätt}
 
     \item Vid \emph{vakans kan} sektionsstyrelsen preliminärt tillsätta posten.
-    \emph{Beslutet fastställs} på nästkommande sektionsmöte.
+      \emph{Beslutet fastställs} på nästkommande sektionsmöte. \label{4.x:styretval}
+
+    \item \emph{Kandidat ska närvara eller lämna skriftligt samtycke.} \label{4.x:samtycke}
 
   \switchcolumn*
     \item[] (se \S 5.9.1, \S 6.2.2, \S\S 13.1.4--5, samt reglemente)
@@ -805,11 +806,11 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 4.3
     \item \emph{Yrkande om misstroendeförklaring kan väckas av antingen} styrelseledamot, 25 medlemmar eller revisor.
 
     \item \emph{Sådant yrkande ska prövas inom 15 läsdagar.
-    Om sektionsmötet ska pröva förtroendet ska kallelsen tydligt ange att en förtroendefråga behandlas.}
+    Om sektionsmötet ska pröva förtroendet ska kallelsen tydligt ange att en förtroendefråga behandlas.} \label{4.3:misstroende}
 
     \item \emph{Svarande vars förtroende behandlas ska under alla omständigheter beredas möjlighet att närvara och tala för sin sak.}
 
-    \item \emph{Entledigande till följd av misstroende sker med sluten omröstning med minst \sfrac{2}{3} majoritet.}  
+    \item \emph{Entledigande till följd av misstroende sker med sluten omröstning med minst \sfrac{2}{3} majoritet.} \label{maj:mi} 
      
     \item \emph{Om yrkande om missförtroendeförklaring} avser \emph{talmanspresidiet i del eller helhet sker utlysning av och kallelse till extra} sektionsmöte av sektionsordförande.
       Sektionsmötet väljer ett temporärt presidium för mötet.
@@ -863,7 +864,8 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 5.1
 
 \setcounter{subsection}{0}
 \subsection{Åligganden}
-Syftet är rent redaktionellt.
+Syftet är eliminera redundans.
+Valberedningen och revisorer får särskild status i åligganden.
 
 Härigenom föreskrivs i fråga om stadgans avsnitt 5.4
 \begin{dels}
@@ -871,9 +873,260 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 5.4
     \item att avsnittet i sin helhet ska ha följande lydelse.
 \end{dels}
 
+\begin{lydelse}
+  \setcounter{subsection}{4}
+  \item[] (se \S 5.2.1)
 
-% TODO: rättigheter, hänvisa också till kapitel 2 och 3.
-% GLÖM inte välja valberedning, vice sektionsordförande. kan kollapsa läsperioder
+  \item Det åligger sektionsmötet att innan utgången av varje läsperiod
+  \begin{itemize}
+    \item behandla verksamhets- och revisionsberättelse samt ansvarsfrihet för eventuella sektionsstyrelse, studienämnd, kommittéer och sektionsföreningar som gått av efter föregående ordinarie sektionsmöte.
+  \end{itemize}
+
+    \item Det åligger sektionsmötet att innan utgången av läsperiod 1
+    \begin{itemize}
+    \item fastställa budget för sektionen.
+    \item fastslå/avslå de ledamöter till sektionen tillhörande programråd som sektionsstyrelsen preliminärt har valt
+    \item fastställa verksamhetsplan för sektionsstyrelsen innevarande läsår
+    \item välja sektionsaktiva enligt reglementet
+    \item var tredje år besluta om förlängt mandat för inspektor.
+    \end{itemize}
+
+  \item Det åligger sektionsmötet att innan utgången av läsperiod 2
+    \begin{itemize}
+    \item välja sektionsaktiva enligt reglementet.
+    \end{itemize}
+
+  \item Det åligger sektionsmötet att innan utgången av läsperiod 3
+    \begin{itemize}
+    \item välja sektionsaktiva enligt reglementet.
+    \end{itemize}
+
+  \item Det åligger sektionsmötet att innan utgången av läsperiod 4
+    \begin{itemize}
+    \item välja sektionsordförande
+    \item välja sektionskassör
+    \item välja övriga ledamöter av sektionsstyrelsen enligt reglementet
+    \item välja talman
+    \item välja sektionsaktiva enligt reglementet.
+    \end{itemize}
+  
+  \switchcolumn
+  \setcounter{subsection}{1}
+
+  \item \emph{Ordinarie} sektionsmöte ska sammanträda minst en gång per läsperiod.
+
+  \item Det åligger sektionsmötet att innan utgången av varje läsperiod
+  \begin{itemize}
+    \item behandla \emph{aktuella årsredovisningar och ansvarsfriheter enligt avsnitt \ref{14.x:redovisning}},
+    \item välja sektionsaktiva enligt reglemente.
+  \end{itemize}
+
+  \item Det åligger sektionsmötet att innan utgången av läsperiod 1
+  \begin{itemize}
+    \item fastställa verksamhetsplan för sektionsstyrelsen,
+    \item fastställa budget för \emph{innevarande räkenskapsår},
+    \item \emph{fastställa programrådsledamöter utsedda av sektionsstyrelsen},
+    \item vart tredje år välja inspektor.
+  \end{itemize}
+
+  \item Det åligger sektionsmötet att innan utgången av läsperiod 4
+  \begin{itemize}
+    \item välja sektionsordförande, vice sektionsordförande och sektionskassör,
+    \item välja talmanspresidium,
+    \item välja valberedning,
+    \item välja revisorer.
+  \end{itemize}
+\end{lydelse}
+
+\setcounter{subsection}{1}
+\subsection{Utlysning} \label{5.2:utlysning}
+Syftet är redaktionellt.
+
+Härigenom föreskrivs i fråga om stadgans avsnitt 5.2 och 5.3
+\begin{dels}
+\item att avsnitt 5.2 ska utgå,
+\item att avsnitt 5.3 omnumreras till 5.2,
+\item att avsnittets rubrik ska lyda ''Utlysning'',
+\item att avsnittet i sin helhet ska ha följande lydelse.
+\end{dels}
+
+\begin{lydelse}
+  \setcounter{subsection}{3}
+  \item[] (se \S 5.2.2)
+  \item Rätt att hos talmannen begära utlysande av
+    sek\-tions\-möte tillkommer styrelseledamot, inspektor,  Chalmers Studentkårs styrelse, sek\-ti\-ons\-revisor  eller minst 25 medlemmar. Sådant möte skall hållas inom femton läsdagar.
+
+  \item Ordinarie sektionsmöte skall utlysas minst 10 läsdagar i
+    förväg genom att preliminär föredragningslista och kallelse an\-slås enligt
+    reglemente. 
+    
+  \item Slutlig föredragningslista, enligt reglemente, anslås minst 3 läsdagar före ordinarie möte. 
+    
+  \item Inkomna motioner och propositioner skall anslås
+    minst 3 läsdagar i förväg.
+    
+  \item Extra sektionsmöte skall utlysas minst 5 läsdagar före mötet
+    och åt\-följ\-as av slutlig föredragningslista.
+
+\switchcolumn
+  \item Sektionsmötet sammanträder på kallelse av talman, \emph{eller vid vakans på kallelse av sektionsstyrelsen.}
+
+  \item Ordinarie sektionsmöte \emph{utlyses senast} 10 läsdagar i förväg genom \emph{anslag} av preliminär föredragningslista och kallelse enligt reglemente.
+
+  \item Slutlig föredragningslista\emph{, tillsammans med inkomna handlingar,} anslås 3 läsdagar före \emph{sammanträdet} enligt reglemente.
+
+  \item \emph{Extra sektionsmöte får begäras av} styrelseledamot, inspektor, Chalmers studentkårs styrelse, revisor eller minst 25 medlemmar.
+    Sådant möte ska hållas inom 15 läsdagar.
+  
+  \item Extra sektionsmöte \emph{utlyses senast} 5 läsdagar i förväg \emph{på samma sätt som ordinarie sektionsmöte}.
+
+  \item \emph{Särskilda bestämmelser om kallelse finns i \S\ref{4.3:misstroende}, \S\ref{15.1:ändring}, och \S\ref{16.0:upplösning}.}
+\end{lydelse}
+
+\setcounter{subsection}{2}
+\subsection{Beslutsförhet}
+Syftet är redaktionellt.
+
+Härigenom föreskrivs i fråga om stadgans avsnitt 5.5
+\begin{dels}
+  \item att avsnittet omnumreras till 5.3,
+  \item att avsnittets rubrik ska lyda ''Beslutsförhet'',
+  \item att avsnittet i sin helhet ska ha följande lydelse.
+\end{dels}
+
+\begin{lydelse}
+  \setcounter{subsection}{5}
+  \item Sektionsmötet är beslutsmässigt om mötet är behörigt utlyst enligt stadgans avsnitt 5.3 samt om fler än 15 röstberättigade medlemmar, exklusive sektionsstyrelsen och presidiet, är närvarande.
+  \item Om färre än 25 medlemmar, exklusive sektionsstyrelsen och presidiet, är närvarande då beslut skall fattas, kan detta ske om ingen yrkar på bordläggning.
+
+\switchcolumn
+  \setcounter{subsection}{3}
+  \item Sektionsmötet är \emph{behörigt} om det är utlyst enligt avsnitt \ref{5.2:utlysning} samt fler än 15 röstberättigade medlemmar, \emph{ej räknat} sektionsstyrelsen och \emph{talmans}presidiet, är närvarande.
+  \item Om färre än 25 medlemmar, \emph{ej räknat} sektionsstyrelsen och \emph{talmans}presidiet, är närvarande, \emph{kan beslut endast fattas om ingen yrkar på bordläggning.}
+\end{lydelse}
+
+\setcounter{subsection}{3}
+\subsection{Sammanträden}
+Syftet är att konsolidera bestämmelser om själva sektionsmötet när det väl sammanträder.
+Rösträtten för särskild medlem införs rent tekniskt här.
+Detaljregler om personval sänks ned till reglemente.
+Motionsrätten specificeras.
+
+Härigenom föreskrivs i fråga om stadgans avsnitt 5.6--5.8, 5.11--5.13
+\begin{dels}
+  \item att avsnitten utgår,
+  \item att ett nytt avsnitt 5.4 införs med rubrik ''Sammanträden'',
+  \item att avsnittet i sin helhet ska ha följande lydelse.
+\end{dels}
+\begin{lydelse}
+  \setcounter{subsection}{6}
+  \item Närvaro-, yttrande-, förslags- och rösträtt tillkommer sektionsmedlem.
+  
+  \item Närvaro- yttrande- och förslagsrätt tillkommer inspektor, sektionsrevisor samt av talmanspreseidiet.
+  
+  \item Närvaro- och yttranderätt tillkommer
+  heders\-med\-lem, seniormedlem, phatriark/mathriark, särskild ledamot, kårledningen, kårens inspektor, samt av mötet adjungerade icke-medlemmar.
+
+  \item Rösträtt kan endast tillkomma sektionsmedlemmar.
+  
+  \switchcolumn
+  \setcounter{subsection}{4}
+  \subsubsection*{Rättigheter}
+  \item Närvaro-, yttrande-, förslags- och rösträtt tillkommer \emph{ordinarie medlem} samt \emph{särskild medlem}. \label{5.x:rösträtt}
+  \item Närvaro-, yttrande-, och förslagsrätt tillkommer inspektor, revisor samt talmanspresidiet.
+  \item Närvaro- och yttranderätt tillkommer \emph{övriga medlemmar}, Chalmers studentkårs ledning, Chalmers studentkårs inspektor samt adjungerade. \label{5.x:grundrätt}
+
+  \switchcolumn*
+  \setcounter{subsection}{11}
+  \setcounter{enumi}{0}
+  \item Röstning med fullmakt får ej ske.
+
+  \item Omröstning skall ske öppet, utom vid personval då stadgans avsnitt 5.12 gäller, och vid misstroendevotum då stadgans paragraf 4.3.5 gäller.
+
+  \item Vid lika röstetal i sakfråga avgörs frågan av talmannen.
+  
+  \switchcolumn
+  \subsubsection*{Beslut och votering}
+  \item \emph{Beslut fattas i regel med enkel majoritet. Vid lika röstetal i sakfråga avgör talmannen.}
+  \item \emph{Undantag från beslutsordningen finns i \S\ref{maj:hm1}, \S\ref{maj:hm2}, \S\ref{maj:sm}, \S\ref{maj:in}, \S\ref{maj:mi}, \S\ref{maj:eä}, \S\ref{maj:sä}, \S\ref{maj:rä}, och \S\ref{maj:up}.}
+  \item \emph{Votering sker i regel öppet. Undantag finns i \S\ref{maj:mi}, samt i reglemente och i mötesordning.}
+  \item \emph{Röst får ej avläggas av ombud.}
+
+  \switchcolumn*
+  \setcounter{subsection}{12}
+  \setcounter{enumi}{0}
+  \item I det fall då det finns fler sökande än antalet platser skall personval ske med sluten omröstning. I annat fall skall personval ske öppet om annat ej begärs av röstberättigad sektionsmötesdeltagare.
+  
+  \item Vid lika röstetal vid personval företas en ny omröstning mellan de kandidater som fått lika röstetal. Vid lika röstetal i den andra omröstningen skiljer lotten.
+  
+  \item En person kan endast väljas om denne är närvarande eller har gett talmannen sitt skriftliga bifall till att bli vald.
+  
+  \setcounter{subsection}{13}
+  \setcounter{enumi}{0}
+  \item Vid vakantsatt post har sektions\-styr\-elsen rätt att preliminärt tillsätta posten. Fastställande sker på näst\-komm\-ande sektionsmöte.
+
+  
+  \switchcolumn
+  \item[] \emph{(ersätts av reglemente)}
+  \item[] \emph{(ersätts av \S\ref{4.x:styretval}, \S\ref{4.x:samtycke})}
+
+  \switchcolumn*
+  \setcounter{subsection}{17} 
+  \setcounter{enumi}{0}
+  \item Motionsrätt tillkommer endast sektionsmedlem.
+
+  \item Medlem som önskar ta upp frågor på föredragningslistan skall
+  anmäla detta till sektionsstyrelsen och talmanspresidiet senast 6 läsdagar i förväg. Sektionsstyrelsen skall ges möjlighet att yttra sig kring dessa.
+    
+  \switchcolumn
+  \subsubsection*{Motion}
+  \item \emph{Motion kan inlämnas till talmanspresidiet av innehavare av förslagsrätt senast 6 läsdagar i förväg, eller senast 11 läsdagar i förväg om ärendet ska anges i kallelse.}
+  \item \emph{Sektionsstyrelsen ges möjlighet att yttra sig i ärendet.}
+ 
+  \switchcolumn*
+  \setcounter{subsection}{18} 
+  \setcounter{enumi}{0}
+  \item Vid sektionsmöte får ärende som inte angivits på slutgiltig
+  före\-drag\-nings\-lista endast tas upp om sektionsmötet med minst 2/3 majoritet så beslutar.
+  
+  \switchcolumn
+  \subsubsection*{Extra ärende}
+  \item Ärende som inte angivits på slutgiltig föredragningslista \emph{får} tas upp om sektionsmötet med \sfrac{2}{3} majoritet så beslutar \emph{och ärendet ej behöver anges i kallelse}. \label{maj:eä}
+\end{lydelse}
+
+\setcounter{subsection}{4}
+\subsection{Protokoll}
+Syftet är redaktionellt.
+
+Härigenom föreskrivs i fråga om stadgans avsnitt 5.14 och 5.15
+\begin{dels}
+\item att avsnitten utgår,
+\item att ett nytt avsnitt 5.5 införs med rubrik ''Protokoll'',
+\item att avsnittet i sin helhet ska ha följande lydelse.
+\end{dels}
+
+\begin{lydelse}
+  \setcounter{subsection}{14}
+  \item Sektionsmötesprotokoll skall justeras av två av mötet utvalda
+  justeringspersoner. Justerat protokoll skall anslås senast tre
+  läsveckor efter mötet.
+
+  \setcounter{subsection}{15}
+  \setcounter{enumi}{0}
+  \item Sektionsmötesbeslut som ej förtecknas i stadga, reglemente eller bland Fysikteknologsektionens övriga styrdokument, skall sammanställas i särskillt dokument tillgängligt för sektionens medlemmar.
+
+  \item Fysikteknologsektionens övriga styrdokument ska listas i reglementet.
+  
+  \switchcolumn
+  \setcounter{subsection}{5}
+  \setcounter{enumi}{0}
+
+  \item Sektionsmötesprotokoll \emph{förs enligt avsnitt \ref{15.2:proto}} och justeras av två av mötet valda \emph{justerare}.
+
+  \item Justerat protokoll ska anslås senast tre läsveckor efter mötet.
+
+  \item Sektionsmötesbeslut ej \emph{förtecknat i annat styrdokument sammanställs i särskild förteckning.}
+\end{lydelse}
 
 \section{Sektionsstyrelsen}
 Syftet är redaktionellt.
@@ -993,7 +1246,7 @@ Härigenom föreskrivs i fråga om stadgans kapitel 8
   \setcounter{section}{7}
   \setcounter{subsection}{1}
   \item \emph{Studienämnden sammanträder minst tre gånger per läsperiod på kallelse av studienämndsordförande.}
-  \item \emph{Alla medlemmar äger} närvaro-, yttrande- och förslagsrätt på studienämndsmöte.
+  \item \emph{Ordinarie och särskilda medlemmar äger} närvaro-, yttrande- och förslagsrätt på studienämndsmöte. \label{7.x:SNFrätt}
   \item \emph{Endast studienämndens ledamöter äger dessutom rösträtt på studienämndsmöte.}
   \item Protokoll \emph{förs} vid studienämndsmöte, justeras av en studienämndsledamot och anslås senast två läsveckor efter mötet.
 \end{lydelse}
@@ -1121,14 +1374,14 @@ Härigenom föreskrivs i fråga om stadgans kapitel 12
   \item Intresseförening skall ha en av sektionsstyrelsen godkänd stadga.
   \item Intresseförening skall ha en styrelse. Minst två tredjedelar av styrelsledamöterna skall vara sektionsmedlemmar.
   \setcounter{subsection}{7}
-  \item Varje sektionsmedlem skall ha rätt till medlemskap. Dock kan föreningsmedlem som motverkar föreningens syfte uteslutas.
+  \item Varje sektionsmedlem skall ha rätt till medlemskap. Dock kan föreningsmedlem som motverkar föreningens syfte uteslutas. 
   \item Styrelsen kan besluta om medlemskap för någon som ej är medlem i Fysikteknologsektionen så länge dylika medlemmar ej utgör mer än hälften av föreningens medlemmar.
   \switchcolumn
   \setcounter{section}{11}
   \item Intresseförening \emph{ska} ha en av sektionsstyrelsen godkänd stadga.
   \item Intresseförening \emph{ska} ha en styrelse \emph{bestående till minst \sfrac{2}{3} av} sektionsmedlemmar.
   \item Varje sektionsmedlem \emph{ska äga} rätt till medlemskap i \emph{intresseförening}.
-    Dock \emph{får} medlem som motverkar \emph{intresse}föreningens syfte uteslutas.
+    Dock \emph{får} medlem som motverkar \emph{intresse}föreningens syfte uteslutas. \label{11.x:intrrätt}
   \item \emph{Sektionsmedlemmar ska utgöra minst hälften av intresseförenings medlemmar.}
 \end{lydelse}
 \setcounter{section}{11}
@@ -1259,7 +1512,7 @@ Härigenom föreskrivs i fråga om stadgans kapitel 13
   \item \emph{Sektionens firma tecknas av sektionsordförande och sektionskassör var för sig.}
 \end{lydelse}
 
-\subsection{Redovisning och ansvarsfrihet}
+\subsection{Redovisning och ansvarsfrihet} \label{14.x:redovisning}
 \begin{lydelse}
   \item[] (se \S 8.7.2, \S 9.3.4, \S 9.4.2, \S 10.3.3, \S 10.4.2, \S 11.4.1)
   \item[] (se \S 13.1.9)
@@ -1269,7 +1522,7 @@ Härigenom föreskrivs i fråga om stadgans kapitel 13
   \item \emph{Sektionsstyrelsen upprättar gemensamt bokslut för sektionen, innefattande alla organ utom intresseföreningar.}
   \item \emph{Studienämnden, kommittéer och övriga organ enligt reglemente upprättar dessutom egen löpande redovising och delbokslut.}
   \item \emph{Sektionsstyrelsen handhar annars den löpande redovisningen.}
-  \item \emph{Bokslut och årsredovisning enligt detta avsnitt presenteras vid första ordinarie sektionsmöte efter verksamhetsårets slut.
+  \item \emph{Bokslut och årsredovisning enligt detta avsnitt presenteras vid första ordinarie sektionsmöte efter organets verksamhetsårs slut.
       Handlingarna tillställs revisorer, sektionsstyrelsen och talmanspresidiet senast 11 läsdagar innan.} \label{14.x:tillställa}
   \item \emph{Frågan om ansvarsfrihet för förtroendeposter behandlas då av sektionsmötet.}
 \end{lydelse}
@@ -1345,7 +1598,7 @@ Härigenom föreskrivs i fråga om stadgans kapitel 14
 \subsection{Ändring}
 \begin{lydelse}
   \setcounter{subsection}{2}
-  \item Ändring av eller tillägg till denna stadga inklusive dess bilagor kan endast göras av sektionsmötet och om minst 2/3 av de närvarande är om beslutet ense under två på varandra följande ordinarie sektionsmöten och den föreslagna lydelsen varit anslagen tillsammans med kallelsen.
+  \item Ändring av eller tillägg till denna stadga inklusive dess bilagor kan endast göras av sektionsmötet och om minst 2/3 av de närvarande är om beslutet ense under två på varandra följande ordinarie sektionsmöten och den föreslagna lydelsen varit anslagen tillsammans med kallelsen. \label{15.1:ändring}
   \item Ändring av eller tillägg till denna stadga skall godkännas av Chalmers Studentkårs styrelse.
   \setcounter{subsection}{3}
   \setcounter{enumi}{0}  
@@ -1354,14 +1607,14 @@ Härigenom föreskrivs i fråga om stadgans kapitel 14
   \item \emph{Ändring av stadga eller reglemente görs av sektionsmötet. Kallelsen ska tydligt ange att fråga om ändring behandlas tillsammans med fullständigt förslag.}
   \item \emph{Beslut om stadgeändring fattas med \sfrac{2}{3} majoritet.
       Fastställande av beslutet görs med \sfrac{2}{3} majoritet på nästkommande sektionsmöte, dock tidigast efter fyra läsveckor förflutit.
-      Lydelsen får ej ändras vid fastställandet.}
+      Lydelsen får ej ändras vid fastställandet.} \label{maj:sä}
   \item \emph{Stadgeändring ska dessutom fastställas av Chalmers studentkårs styrelse.}
-  \item \emph{Beslut om reglementesändring fattas med \sfrac{2}{3} majoritet.}
+  \item \emph{Beslut om reglementesändring fattas med \sfrac{2}{3} majoritet.} \label{maj:rä}
 \end{lydelse}
 \setcounter{section}{15}
 \setcounter{subsection}{1}
 
-\subsection{Protokoll och tillkännagivande}
+\subsection{Protokoll och tillkännagivande} \label{15.2:proto}
 \begin{lydelse}
   \setcounter{section}{14}
   \setcounter{subsection}{5}
@@ -1369,10 +1622,12 @@ Härigenom föreskrivs i fråga om stadgans kapitel 14
   \item Beslut som fattas inom sektionen och berör Chalmers Studentkår i dess helhet skall meddelas Chalmers Studentkårs styrelse.
   \item Sektionens officiella kommunikationskanaler utgörs av sektionens hemsida samt sektionens officiella anslagstavla.
   \item Meddelanden och beslut är behörigt anslagna då de anslås via någon av sektionens officiella kommunikationskanaler.
+  \item[] (se \S 2.2.5, \S 2.8.2) 
   \switchcolumn
   \item Protokoll som förs i sektionens organ ska innehålla anteckningar om ärendenas art, samtliga ställda och ej återtagna yrkanden, beslut samt särskilda yttranden och reservationer.
   \item Protokoll och beslut \emph{tillkännages genom behörigt anslag enligt reglemente.}
   \item Beslut \emph{fattade} inom sektionen som berör Chalmers studentkår i dess helhet \emph{meddelas} Chalmers studentkårs styrelse.
+  \item Medlem \emph{äger} rätt att ta del av mötesprotokoll och sektionens övriga handlingar, undantaget de dokument som listas som icke offentliga i reglemente. \label{15.x:offentlighet}
 \end{lydelse}
 \setcounter{section}{15}
 \setcounter{subsection}{2}
@@ -1387,6 +1642,7 @@ Härigenom föreskrivs i fråga om stadgans kapitel 14
   \item \emph{Vid konflikt med annat styrdokument har stadga och reglemente företräde. Vid konflikt med reglemente har stadga företräde.}
   \item \emph{Vid tvist om stadgans tolkning avgörs frågan av inspektor.}
 \end{lydelse}
+\setcounter{section}{15} 
 
 \section{Upplösning}
 Syftet är redaktionellt.
@@ -1403,11 +1659,13 @@ Härigenom föreskrivs i fråga om stadgans kapitel 15
   \item att kapitlet i sin helhet ska ha följande lydelse.
 \end{dels}
 \begin{lydelse}
+  \setcounter{section}{15}
   \item Sektionen upplöses genom beslut på två på varandra följande sektionsmöten med minst 3/4 majoritet och minst 25 bifallande medlemmar.
   \item Om sektionsmötet beslutar att upplösa sektionen skall samtliga dess tillgångar och skulder, som framgår av upprättad balansräkning, i och med upplösning tillfalla Chalmers Studentkår.
   \item I det fall medlen utgörs av tillgångar skall Chalmers Studentkår fondera och förvalta dessa till ny sektion bildats för studerande på utbildningsprogrammet för Teknisk fysik och/eller Teknisk matematik eller motsvarande.
   \switchcolumn
-  \item Sektionen upplöses genom beslut på två sektionsmöten, \emph{mellan vilka minst 4 läsveckor förflutit}, med \sfrac{3}{4} majoritet och minst 25 bifallande medlemmar.
+  \item Sektionen upplöses genom beslut på två sektionsmöten, \emph{mellan vilka minst 4 läsveckor förflutit}, med \sfrac{3}{4} majoritet och minst 25 bifallande medlemmar. \label{maj:up}
+  \emph{Kallelsen ska tydligt ange att fråga om upplösning behandlas.} \label{16.0:upplösning}
   \item \emph{Vid upplösning avvecklar sektionsstyrelsen snarast sektionen.
       Eventuellt överskott tillfaller Chalmers studentkår.
       Sektionens handlingar arkiveras på Göteborgs föreningsarkiv.}
