--- a/main.tex
+++ b/main.tex
@@ -598,7 +598,7 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 4.1
     
 	\switchcolumn*
     \item[] (se \S 8.1.5, \S 9.2.1, \S 10.2.1, \S 11.2.1, \S 12.4)
-
+  
     \item[] (se \S 8.1.6, \S 9.3.1, \S 10.3.1, \S 11.3.1, \S 12.5)
 
     \item[] (se \S 8.4.6, \S 9.3.2, \S 12.5.2)
@@ -803,7 +803,8 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 4.3
     \subsubsection*{Misstroendeförklaring}
     \item \emph{En högre instans enligt avsnitt~\ref{4.2:ansvar} kan förklara att en sektionsaktiv inte har dess förtroende.}
 
-    \item \emph{Yrkande om misstroendeförklaring kan väckas av antingen} styrelseledamot, 25 medlemmar eller revisor.
+    \item \emph{Yrkande om misstroendeförklaring kan väckas av antingen}
+      styrelseledamot, revisor eller 25 medlemmar \emph{med förslagsrätt på sektionsmötet}.
 
     \item \emph{Sådant yrkande ska prövas inom 15 läsdagar.
     Om sektionsmötet ska pröva förtroendet ska kallelsen tydligt ange att en förtroendefråga behandlas.} \label{4.3:misstroende}
@@ -975,7 +976,8 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 5.2 och 5.3
 
   \item Slutlig föredragningslista\emph{, tillsammans med inkomna handlingar,} anslås 3 läsdagar före \emph{sammanträdet} enligt reglemente.
 
-  \item \emph{Extra sektionsmöte får begäras av} styrelseledamot, inspektor, Chalmers studentkårs styrelse, revisor eller minst 25 medlemmar.
+  \item \emph{Extra sektionsmöte får begäras av} styrelseledamot, inspektor,
+    Chalmers studentkårs styrelse, revisor eller minst 25 medlemmar \emph{med förslagsrätt}.
     Sådant möte ska hållas inom 15 läsdagar.
   
   \item Extra sektionsmöte \emph{utlyses senast} 5 läsdagar i förväg \emph{på samma sätt som ordinarie sektionsmöte}.
@@ -1002,7 +1004,7 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 5.5
 \switchcolumn
   \setcounter{subsection}{3}
   \item Sektionsmötet är \emph{behörigt} om det är utlyst enligt avsnitt \ref{5.2:utlysning} samt fler än 15 röstberättigade medlemmar, \emph{ej räknat} sektionsstyrelsen och \emph{talmans}presidiet, är närvarande.
-  \item Om färre än 25 medlemmar, \emph{ej räknat} sektionsstyrelsen och \emph{talmans}presidiet, är närvarande, \emph{kan beslut endast fattas om ingen yrkar på bordläggning.}
+  \item Om färre än 25 \emph{röstberättigade} medlemmar, \emph{ej räknat} sektionsstyrelsen och \emph{talmans}presidiet, är närvarande, \emph{kan beslut endast fattas om ingen yrkar på bordläggning.}
 \end{lydelse}
 
 \setcounter{subsection}{3}
