--- a/main.tex
+++ b/main.tex
@@ -101,7 +101,7 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 1.1 att \S 1.1.1 ska ha föl
 \begin{lydelse}
     \item Fysikteknologsektionen, benämns nedan som sektionen, vid Chalmers studentkår är en ideell förening bestående av studerande vid utbildningsprogrammen Teknisk fysik eller Teknisk matematik vid Chalmers tekniska högskola och av studenter vid därtill associerade mastersprogram som betalat sektionsavgift till densamma.
   \switchcolumn
-    \item Fysikteknologsektionen \emph{vid Chalmers studentkår, nedan benämnt sektionen}, är en ideell förening \emph{för studenter} vid utbildningsprogrammen Teknisk fysik, Teknisk matematik \emph{och därtill associerade mastersprogram} vid Chalmers tekniska högskola.
+    \item Fysikteknologsektionen \emph{vid Chalmers studentkår, nedan benämnt sektionen}, är en ideell förening \emph{för studenter} vid utbildningsprogrammen Teknisk fysik, Teknisk matematik \emph{och därtill associerade masterprogram} vid Chalmers tekniska högskola.
 \end{lydelse}
 
 \subsection{Verksamhet}
@@ -227,7 +227,7 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 2.2 och 2.3
     (se \S 2.1.1)
 
   \switchcolumn
-    \item \emph{Ordinarie} medlem i sektionen är kårmedlem som studerar vid utbildningsprogrammen för Teknisk fysik, Teknisk matematik \emph{eller därtill associerat mastersprogram} vid Chalmers tekniska högskola \emph{och har} betalt sektionsavgift.
+    \item \emph{Ordinarie} medlem i sektionen är kårmedlem som studerar vid utbildningsprogrammen för Teknisk fysik, Teknisk matematik \emph{eller därtill associerat masterprogram} vid Chalmers tekniska högskola \emph{och har} betalt sektionsavgift.
 
     \subsubsection*{Rättigheter}
   \switchcolumn*
@@ -414,7 +414,7 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 2.7
 
   \switchcolumn
   \setcounter{enumi}{0}
-    \item \emph{Emeriti är} den som avlagt masters- eller civilingenjörsexamen som \emph{ordinarie} medlem av sektionen.
+    \item \emph{Emeriti är} den som avlagt master- eller civilingenjörsexamen som \emph{ordinarie} medlem av sektionen.
     
   \switchcolumn*
     \subsubsection*{Phatriarkers/Mathriarkers rättigheter}%
@@ -745,8 +745,6 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 4.3
       Beslutet fastställs på nästkommande sektionsmöte.}
   \label{4.x:kvarstå}
 
-  \item \emph{Vid entledigande av förtroendevald ska extra sektionsmöte utlysas inom 15 läsdagar där fyllnadsval ska äga rum}.
-
   \item \emph{Vid entledigande av ekonomiskt ansvarig ska bokslut för perioden fram till fyllnadsvalet upprättas inom fyra veckor från fyllnadsvalet, och revision ska ske.}
     \label{4.2:enteko}
 
@@ -754,6 +752,8 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 4.3
     \item[] (se \S\S 4.3.6--7, \S 4.3.10)
     \switchcolumn
     \subsubsection*{Sektionsstyrelsen}
+    \item \emph{Om ledamot i sektionsstyrelsen entledigas ska extra sektionsmöte utlysas inom 15 läsdagar där fyllnadsval ska äga rum}.
+
     \item Om sektionsstyrelsen \emph{i sin helhet entledigas ska omedelbart} interimstyrelse och ny valberedning väljas.
 
     \item Interimstyrelsen övertar styrelsens befogenheter och skyldigheter \emph{tills ny styrelse är vald}, men får endast handha löpande ärenden.
@@ -1134,6 +1134,7 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 5.14 och 5.15
 Syftet är redaktionellt.
 Många tidigare bestämmelser har införlivats i övriga kapitel.
 Definitionen av förtroendeposter lyfts från reglemente.
+Stadgat krav på antal möten per läsperiod anses förlegat.
 
 Härigenom föreskrivs i fråga om stadgans kapitel 7
 \begin{dels}
@@ -1196,7 +1197,8 @@ Härigenom föreskrivs i fråga om stadgans kapitel 7
     styrelseledamöter och anslås senast två läsveckor efter mötet.
   \switchcolumn  
 
-  \item Sektionsstyrelsen sammanträder minst tre gånger per läsperiod på kallelse av sektionsordförande.
+  \item[] \emph{(utgår)}
+  \item Sektionsstyrelsen sammanträder på kallelse av sektionsordförande.
   \item Sektionsstyrelsen är \emph{beslutsför} om \emph{mer än hälften av sektionsstyrelsens ledamöter är närvarande inklusive sektionsordförande eller vice sektionsordförande}.
   \item Protokoll förs vid styrelsemöte, justeras av två styrelseledamöter och anslås senast två läsveckor efter mötet.
 \end{lydelse}
