--- a/main.tex
+++ b/main.tex
@@ -705,9 +705,9 @@ Härigenom förskrivs i fråga om stadgan
     \item[] (se \S 13.1.2, samt reglemente)
     \switchcolumn  
     \subsubsection*{Valbarhet}
-    \item \emph{Ingen kan samtidigt inneha två förtroendeposter, eller två poster i samma organ.}
+    \item \emph{Ingen kan samtidigt inneha fler än en förtroendepost, eller fler än en post i samma organ.}
 
-    \item \emph{Ingen kan samtidigt inneha post i två eller fler av sektionsstyrelsen, talmanspresidiet, revisorer och valberedning.} \label{4.x:valbar.dubbel}
+    \item \emph{Ingen kan samtidigt inneha post i fler än en av sektionsstyrelsen, talmanspresidiet, revisorer och valberedning.} \label{4.x:valbar.dubbel}
 
     \item \emph{Talman, vice talman och ledamot i valberedningen får dessutom ej inneha post i studienämnden eller kommitté.} \label{4.x:valbar.ober}
 
@@ -1199,7 +1199,7 @@ Härigenom föreskrivs i fråga om stadgans kapitel 7
 
   \item[] \emph{(utgår)}
   \item Sektionsstyrelsen sammanträder på kallelse av sektionsordförande.
-  \item Sektionsstyrelsen är \emph{beslutsför} om \emph{mer än hälften av sektionsstyrelsens ledamöter är närvarande inklusive sektionsordförande eller vice sektionsordförande}.
+  \item Sektionsstyrelsen är \emph{beslutsför} om \emph{fler än hälften av sektionsstyrelsens ledamöter är närvarande inklusive sektionsordförande eller vice sektionsordförande}.
   \item Protokoll förs vid styrelsemöte, justeras av två styrelseledamöter och anslås senast två läsveckor efter mötet.
 \end{lydelse}
 \setcounter{section}{6}
